[gd_scene load_steps=9 format=3 uid="uid://b2tfnwdynuxp0"]

[ext_resource type="Script" path="res://Objects/Player/research_window/ButtonsOfTipesTechnologies.gd" id="1"]
[ext_resource type="Script" path="res://Objects/Player/research_window/research_window.gd" id="2"]
[ext_resource type="Script" path="res://Objects/Player/research_window/Research_button.gd" id="3"]
[ext_resource type="FontFile" uid="uid://dpaiod0xc1xgs" path="res://Graphics/Fonts/pixel_2.ttf" id="4"]
[ext_resource type="Script" path="res://Objects/Player/research_window/ButtonOfTipeTechnology.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://dqcotlbaxn3v5" path="res://Graphics/Sprites/GUI/technology_button.png" id="5_7jvcu"]
[ext_resource type="Texture2D" uid="uid://kwwekstdqhct" path="res://Graphics/Sprites/GUI/technology_button_2.png" id="6_ah8v2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n4j4p"]
bg_color = Color(0.443137, 0.360784, 0.309804, 1)

[node name="research_window" type="Panel"]
offset_top = 61.0
offset_right = 1920.0
offset_bottom = 1078.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n4j4p")
script = ExtResource("2")

[node name="HBoxContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(1167, 525)
layout_mode = 0
offset_top = 57.0
offset_right = 1920.0
offset_bottom = 582.0
theme_override_constants/h_separation = 20
columns = 5

[node name="ArmyManagerement" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_constants/separation = 3

[node name="Label" type="Label" parent="HBoxContainer/ArmyManagerement"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "Управление армией"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeavyWeapon" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_constants/separation = 3

[node name="Label" type="Label" parent="HBoxContainer/HeavyWeapon"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "Тяжелое вооружение"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LightWeapon" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_constants/separation = 3

[node name="Label" type="Label" parent="HBoxContainer/LightWeapon"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "Легкое вооружение"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShipDesign" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_constants/separation = 3

[node name="Label" type="Label" parent="HBoxContainer/ShipDesign"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "Конструкция кораблей"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FleetManagement" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_constants/separation = 3

[node name="Label" type="Label" parent="HBoxContainer/FleetManagement"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "Управление флотом"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="GridContainer" parent="."]
visible = false
clip_contents = true
custom_minimum_size = Vector2(1167, 525)
layout_mode = 1
offset_top = 57.0
offset_right = 1920.0
offset_bottom = 582.0
theme_override_constants/h_separation = 20
columns = 5

[node name="FarmProduction" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 5
theme_override_constants/separation = 3

[node name="Label" type="Label" parent="HBoxContainer2/FarmProduction"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "Физика и энергия"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FactoryProduction" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 5
theme_override_constants/separation = 3

[node name="Label" type="Label" parent="HBoxContainer2/FactoryProduction"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "Фабричное производство"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Metallurgy" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 5
theme_override_constants/separation = 3

[node name="Label" type="Label" parent="HBoxContainer2/Metallurgy"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "Металлургия"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Infrastructure" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 5
theme_override_constants/separation = 3

[node name="Label" type="Label" parent="HBoxContainer2/Infrastructure"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "Инфраструктура"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EconomicStructures" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 5
theme_override_constants/separation = 3

[node name="Label" type="Label" parent="HBoxContainer2/EconomicStructures"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "Гос. вмешательство"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Effects" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 637.0
offset_right = 582.0
offset_bottom = 1016.0

[node name="ButtonsOfTipesTechnologies" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 57.0
theme_override_constants/separation = 0
script = ExtResource("1")

[node name="ButtonOfTipeTechnology" type="Button" parent="ButtonsOfTipesTechnologies"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
text = "Военное дело"
script = ExtResource("5")

[node name="ButtonOfTipeTechnology2" type="Button" parent="ButtonsOfTipesTechnologies"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
text = "Экономика"
script = ExtResource("5")

[node name="StartResearch" type="Button" parent="."]
layout_mode = 0
offset_left = 1477.0
offset_top = 918.0
offset_right = 1920.0
offset_bottom = 1016.0
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 40
disabled = true
text = "Исследовать"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 867.0
offset_top = 820.0
offset_right = 1477.0
offset_bottom = 1017.0
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 44
text = "Название технологии
Осталось дней: n"
horizontal_alignment = 1

[node name="LabelExample" type="Label" parent="."]
layout_mode = 0
offset_left = 241.0
offset_top = -273.0
offset_right = 476.0
offset_bottom = -225.0
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 24
text = "Маневренная война"
horizontal_alignment = 1

[node name="TextureButtonExample" type="TextureButton" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(230, 65)
layout_mode = 2
offset_top = -273.0
offset_right = 230.0
offset_bottom = -208.0
texture_normal = ExtResource("5_7jvcu")
texture_pressed = ExtResource("6_ah8v2")
stretch_mode = 0
script = ExtResource("3")

[node name="Label" type="Label" parent="TextureButtonExample"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 22
text = "Передовая выплавка"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="StartResearch" to="." method="start_research"]
